# types-website

./: .gitignore  BookOfAbstracts.hs  General.hs  INSTALL.md  Papers.hs  Parse.hs  Paths.hs  README.md  Render.hs  Site.hs  TODO.md  accepted.md  book-of-abstracts.md  bookabstracts.md  call-for-contributions.md  cfp.md  committees.md  generate_calendar.py  index.md  invited-speakers.md  invitedspeakers.md  pc.md  practical.md  programme.md  registration.md  site.hs  social.md  sponsors.md  types2026-website.cabal
abstracts/: README.md
abstracts-invited/: .gitignore
book-of-abstracts/: .gitignore  book-of-abstracts.tex
css/: main.css
data/: invited.json  organizing-committee.json  papers.json  program-committee.json  schedule.json  sessions.json  steering-committee.json
include/: important_dates.md  sponsors.md
pages/: accepted.md  call-for-contributions.md  committees.md  index.md  invited-speakers.md  practical.md  programme.md  registration.md  social.md  sponsors.md
placeholder/: index.html
slides/: README.md
slides-invited/: README.md
src/: BookOfAbstracts.hs  General.hs  Parse.hs  Paths.hs  Render.hs  Site.hs
templates/: default.html  navigation.html
tools/: Dockerfile  collect_output.py  monitor-website.py  reference-transaction-hook.py
tools/deploy/: client.py  server.py  types-2026-deploy.service
