cabal-version: 2.4
name: types2026-website
version: 0.1.0.0
build-type: Simple

executable site
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends:
    , aeson        >= 2.2.0    && < 3
    , base         >= 4.16.0.0 && < 4.22
    , blaze-html   >= 0.9.0    && < 1
    , bytestring   >= 0.11.2   && < 1
    , containers   >= 0.6      && < 1
    , directory    >= 1.3      && < 2
    , filepath     >= 1.4.2.2  && < 1.6
    , hakyll       >= 4.16.7.0 && < 5
    , mtl          >= 2.3.1    && < 3
    , text         >= 2.0.2    && < 3
    , time         >= 1.12     && < 2
  main-is: Site.hs
  other-modules: Parse, Render
