cabal-version: 2.4
name: types2026-website
version: 0.1.0.0
build-type: Simple

executable site
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
  hs-source-dirs: .
  build-depends:
    , aeson              >= 2.2.0    && < 3
    , base               >= 4.16.0.0 && < 5
    , blaze-html         >= 0.9.0    && < 1
    , bytestring         >= 0.11.2   && < 1
    , containers         >= 0.6      && < 1
    , directory          >= 1.3      && < 2
    , filepath           >= 1.4.2.2  && < 2
    , hakyll             >= 4.16.7.0 && < 5
    , mtl                >= 2.3.1    && < 3
    , text               >= 2.0.2    && < 3
    , time               >= 1.12     && < 2
    , transformers       >= 0.6.3    && < 1
    , unicode-collation  >= 0.1.3    && < 2
  main-is: Site.hs
  other-modules: General, Parse, Paths, Render

executable book-of-abstracts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
  hs-source-dirs: .
  build-depends:
    , aeson              >= 2.2.0    && < 3
    , base               >= 4.16.0.0 && < 5
    , bytestring         >= 0.11.2   && < 1
    , containers         >= 0.6      && < 1
    , directory          >= 1.3      && < 2
    , filepath           >= 1.4.2.2  && < 2
    , HaTeX              >= 3.22     && < 4
    , mtl                >= 2.3.1    && < 3
    , process            >= 1.6.28   && < 2
    , text               >= 2.0.2    && < 3
    , time               >= 1.12     && < 2
    , transformers       >= 0.6.3    && < 1
    , unicode-collation  >= 0.1.3    && < 2
  main-is: BookOfAbstracts.hs
  other-modules: General, Parse, Paths
